# eva

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv
.github/workflows/: ci.yml
docs/: index.md  reference_pages.py
package/: pyproject.toml  requirements.txt  setup.py
package/src/evametoc/: __init__.py  core.py  evafile.py  metadata.py  utils.py
package/src/evametoc/data/: __init__.py  group.py  nans.py  postprocess.py  prepare.py  preprocess.py
package/src/evametoc/video/: __init__.py  ffmpeg.py  frames.py
reference/: SUMMARY.txt
reference/evametoc/: core.html  evafile.html  metadata.html  utils.html
reference/evametoc/data/: group.html  nans.html  postprocess.html  prepare.html  preprocess.html
reference/evametoc/video/: ffmpeg.html  frames.html
search/: search_index.js  search_index.json
